--- a/internal-tls.yaml
+++ b/internal-tls.yaml
@@ -7,7 +7,8 @@ spec:
   secretName: internal-sso-tls
   subject:
     organizations:
-    - Open Cluster Management
+    - open-cluster-management.io
+    - red-chesterfield.com
   usages:
     - server auth
     - client auth
