move dex client into sub folder with explicit namespace set in kustomization

--- a/dex-client/dex-client-deployment.yaml
+++ b/dex-client/dex-client-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: dex-client-controller-manager
+  namespace: sso
   labels:
     app.kubernetes.io/instance: sso
     app.kubernetes.io/name: sso
