oauth name must default to cluster to merge successfully back with exising oauth cr on the server

--- a/oauth/oauth.yaml
+++ b/oauth/oauth.yaml
@@ -1,7 +1,7 @@
 apiVersion: config.openshift.io/v1
 kind: OAuth
 metadata:
-  name: sso-oauth
+  name: cluster
   namespace: openshift-config
 spec:
   identityProviders:
