fix issues with cert properties

--- a/internal-tls.yaml
+++ b/internal-tls.yaml
@@ -7,8 +7,7 @@ spec:
   secretName: internal-sso-tls
   subject:
     organizations:
-    - open-cluster-management.io
-    - red-chesterfield.com
+    - Open Cluster Management
   usages:
     - server auth
     - client auth
