fix up naming of resources

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -10,13 +10,10 @@ configMapGenerator:
     - dex-config.yaml
 
 resources:
-  - github-oauth-creds.yaml
+  - github-creds.yaml
   - sso-sa.yaml
   - rbac.yaml
   - deployment.yaml
   - service.yaml
   - ingress.yaml
   # - route.yaml
-
-bases:
-  - dex-client
