--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sso
   namespace: sso
   annotations:
-    cert-manager.io/cluster-issuer: psi
+    cert-manager.io/cluster-issuer: public-issuer
     kubernetes.io/ingress.class: haproxy
     kubernetes.io/tls-acme: 'true'
     route.openshift.io/termination: reencrypt
