--- a/route.yaml
+++ b/route.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sso
   namespace: sso
 spec:
-  host: sso.apps.openshift-cluster-name.base-domain.tld
+  host: sso.$(APPS_DOMAIN)
   path: /
   port:
     targetPort: https
