add apps-domain-tls-certs as a required component

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,6 +3,9 @@ kind: Component
 
 generatorOptions:
   disableNameSuffixHash: true
+
+components:
+  - github.com/ocm-sop/apps-domain-tls-cert?ref=main
   
 configMapGenerator:
 - name: dex-config
